syntax = "proto3";

option go_package = "pb/events";

message TaskDoneEvent {
  int32 user_id = 1;
  int32 task_id = 2;
  int32 priority = 3;
}
